# zero2prod

./: .env  Cargo.toml  Dockerfile  README.MD  spec.yaml  sqlx-data.json
.github/workflows/: audit.yml  general.yml  scheduled.yml
configuration/: base.yaml  production.yaml
migrations/: 20230123012324_create_subscription_table.sql  20230207024239_make_status_not_null_in_subscriptions.sql  20230207024525_create_subscription_tokens_table.sql
scripts/: init_db.sh
src/: configuration.rs  email_client.rs  lib.rs  main.rs  startup.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs  subscriptions_confirm.rs
tests/: health_check.rs
tests/api/: helpers.rs  subscriptions.rs  subscriptions_confirm.rs
